// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignUpModal renders active 1`] = `
<div
  class="modal is-active"
>
  <div
    class="modal-background"
  />
   
  <div
    class="modal-card"
  >
    <header
      class="modal-card-head"
    >
      <p
        class="modal-card-title"
      >
        Sign Up
      </p>
       
      <button
        aria-label="close"
        class="delete"
      />
    </header>
     
    <section
      class="modal-card-body"
    />
     
    <footer
      class="modal-card-foot"
    >
      <button
        class="button is-success"
      >
        Sign Up
      </button>
       
      <button
        class="button"
      >
        Cancel
      </button>
    </footer>
  </div>
</div>
`;

exports[`SignUpModal renders regular 1`] = `
<div
  class="modal"
>
  <div
    class="modal-background"
  />
   
  <div
    class="modal-card"
  >
    <header
      class="modal-card-head"
    >
      <p
        class="modal-card-title"
      >
        Sign Up
      </p>
       
      <button
        aria-label="close"
        class="delete"
      />
    </header>
     
    <section
      class="modal-card-body"
    />
     
    <footer
      class="modal-card-foot"
    >
      <button
        class="button is-success"
      >
        Sign Up
      </button>
       
      <button
        class="button"
      >
        Cancel
      </button>
    </footer>
  </div>
</div>
`;
